// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LocaleAdminModal /> renders correctly 1`] = `
<Modal
  animation={false}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="modal--update"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <form
    id="local-admin-modal"
    onSubmit={[Function]}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        className="font-weight-bold"
        componentClass="h4"
      >
        <Icon
          name="network-add"
          size={32}
        />
         
        <FormattedMessage
          id="add-a-language"
          values={Object {}}
        />
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      <Relay(LocaleAdminModalList)
        locales={
          Array [
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "id": "fr-FR",
              "isEnabled": true,
            },
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "id": "en-EN",
              "isEnabled": false,
            },
          ]
        }
      />
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="font-weight-bold"
        >
          <FormattedMessage
            id="global.cancel"
            values={Object {}}
          />
        </span>
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        disabled={true}
        id="local-admin-modal_submit"
        onClick={[Function]}
        type="button"
      >
        <span
          className="font-weight-bold"
        >
          <FormattedMessage
            id="global.add"
            values={Object {}}
          />
        </span>
      </Button>
    </ModalFooter>
  </form>
</Modal>
`;

exports[`<LocaleAdminModal /> renders correctly empty 1`] = `
<Modal
  animation={false}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="modal--update"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <form
    id="local-admin-modal"
    onSubmit={[Function]}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        className="font-weight-bold"
        componentClass="h4"
      >
        <Icon
          name="network-add"
          size={32}
        />
         
        <FormattedMessage
          id="add-a-language"
          values={Object {}}
        />
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      <Relay(LocaleAdminModalList)
        locales={Array []}
      />
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="font-weight-bold"
        >
          <FormattedMessage
            id="global.cancel"
            values={Object {}}
          />
        </span>
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        disabled={true}
        id="local-admin-modal_submit"
        onClick={[Function]}
        type="button"
      >
        <span
          className="font-weight-bold"
        >
          <FormattedMessage
            id="global.add"
            values={Object {}}
          />
        </span>
      </Button>
    </ModalFooter>
  </form>
</Modal>
`;
